--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Godot 4+ specific ignores
 .godot/
+maps/.DS_Store
+maps/fgd/point_classes/.DS_Store
+maps/.DS_Store
+maps/fgd/point_classes/.DS_Store
